# dlib_obj_detector

./: .gitignore  CMakeLists.txt  sample_input_file.txt
include/: load_data.h  obj_det_dnn.h  tfd_net_v01.h  tfd_net_v02.h  yj_dnn.h  yj_net_v04.h  yj_net_v07.h  yj_net_v08.h  yj_net_v1.h  yj_net_v2.h  yj_net_v3.h  yj_net_v4.h  yj_net_v5.h  yj_net_v6.h  yj_net_v7.h  yj_net_v8.h  yj_net_v9.h
src/: obj_det_ex_v1.cpp  yj_ex_v1.cpp
